force-app/main/default/objects/PMI_Actual__c/fields/Month_Name_Abbrev__c.field-meta.xml
<CustomField>
    <fullName>Month_Name_Abbrev__c</fullName>
    <formula>CASE(
MONTH(ADDMONTHS(Promotion_Start_Date__c, Period__c)), 1, $Label.Jan, 2, $Label.Feb,3,$Label.Mar,4,$Label.Apr,5,$Label.May,6,$Label.Jun,7,$Label.Jul,8,$Label.Aug,9,$Label.Sep,10,$Label.Oct,11,$Label.Nov,12,$Label.Dec,&apos;UNKNOWN&apos;)</formula>
    <label>Month Name Abbrev</label>
    <type>Text</type>
</CustomField>