force-app/main/default/objects/PMI_Actual__c/fields/Planned_Qty_for_Period__c.field-meta.xml
<CustomField>
    <fullName>Planned_Qty_for_Period__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Planned Qty for Period</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>