force-app/main/default/objects/PMI_Actual__c/fields/Planned_Qty_for_Period_Converted__c.field-meta.xml
<CustomField>
    <fullName>Planned_Qty_for_Period_Converted__c</fullName>
    <description>Convert from bottles to flat case</description>
    <formula>IF( ISPICKVAL( Actual_Cases_Bottles__c , &quot;Bottles&quot;),  (Planned_Qty_for_Period__c /  Product_Pack_Qty__c  ),  Planned_Qty_for_Period__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Qty for Period (Converted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>