force-app/main/default/objects/PMI_Actual__c/fields/Planned_Rebate_Total_for_Period__c.field-meta.xml
<CustomField>
    <fullName>Planned_Rebate_Total_for_Period__c</fullName>
    <formula>IF( ISPICKVAL(Actual_Cases_Bottles__c,&apos;Cases&apos;), Planned_Qty_for_Period__c *  Planned_Rebate_for_Period__c, (Planned_Qty_for_Period__c /  Product_Pack_Qty__c ) * Planned_Rebate_for_Period__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Rebate Total for Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>