force-app/main/default/objects/PMI_Actual__c/recordTypes/INR_Promotion.recordType-meta.xml
<RecordType>
    <fullName>INR_Promotion</fullName>
    <active>true</active>
    <description>India Promotion</description>
    <label>INR-Promotion</label>
</RecordType>